--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -4,7 +4,9 @@ name: Build/Test/Analyze
 on: [push, pull_request]
 
 jobs:
-  ### Build
+  #-----------------------------------------
+  # Build
+  #-----------------------------------------
   build:
     runs-on: ubuntu-latest
     name: Build
@@ -32,7 +34,8 @@ jobs:
             ${{ runner.os }}-
       # Install dependecies
       - name: Install dependencies
-        run: npm ci
+        run: |
+          npm ci
       # Build client
       - name: Build client
         run: bash ./cli/build.sh
@@ -53,8 +56,9 @@ jobs:
           path: |
             coverage
             analysis
-
-  ### Test
+  #-----------------------------------------
+  # Test
+  #-----------------------------------------
   test:
     runs-on: ubuntu-latest
     needs: build
@@ -65,20 +69,24 @@ jobs:
       - uses: actions/checkout@v2
       # Install dependecies
       - name: Install dependencies
-        run: npm ci
+        run: |
+          npm ci
+          cd server && npm ci
       # unit test FE
-      - name: Unit Tests
+      - name: Unit Tests Frontend
         run: npm run test
       # unit test BE
-      - name: Unit Tests
+      - name: Unit Tests Backend
         run: |
           cd server
           npm run test:unit
-      # TODO: e2e
+      # TODO: e2e with cypress
       # - name: End to end tests
       #   run: npm run test
 
-  ### Code Quality
+  #-----------------------------------------
+  # Code Quality ( Sonarcloud )
+  #-----------------------------------------
   analyze:
     runs-on: ubuntu-latest
     needs: build
