--- a/server/package.json
+++ b/server/package.json
@@ -17,9 +17,10 @@
     "prod":" ../node_modules/.bin/ts-node server.ts ",
     "dev": "nodemon --config \"./nodemon.json\"",
     "test:unit":"NODE_ENV=test start-server-and-test prod 5001 test",
-    "test": "jest",
-    "test:watch": "jest -o --watch",
-    "test:coverage": "jest --coverage",
+    "test:unit:coverage":"NODE_ENV=test start-server-and-test prod 5001 test:coverage",
+    "test": "jest  " ,
+    "test:watch": "jest -o --watch --detectOpenHandles",
+    "test:coverage": "jest --coverage --detectOpenHandles",
     "test:e2e": "\\TODO:"
   },
   "jest": {
