--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -15,16 +15,16 @@ sonar.verbose=true
 # Sources
 # relative paths to source directories. More details and properties are described
 # in https://sonarcloud.io/documentation/project-administration/narrowing-the-focus/
-sonar.sources=src, server, analysis, coverage, build
+sonar.sources=src, server, analysis, coverage, build, server/coverage
 
 # Exclusions
-sonar.exclusions=build/**, analysis/** , coverage/**
-sonar.cpd.exclusions= build/**, analysis/** , coverage/**
-sonar.coverage.exclusions= build/**, analysis/** , coverage/**
+sonar.exclusions=build/**, analysis/** , coverage/**,server/coverage/**
+sonar.cpd.exclusions= build/**, analysis/** , coverage/**,server/coverage/**
+sonar.coverage.exclusions= build/**, analysis/** , coverage/**,server/coverage/**
 
 # Coverage and Test
 sonar.dynamicAnalysis=reuseReports
-sonar.javascript.lcov.reportPaths=coverage/lcov.info
+sonar.javascript.lcov.reportPaths=coverage/lcov.info,server/coverage/lcov.info
 sonar.eslint.reportPaths=analysis/eslint-report.json
 
 # Test
