--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -15,12 +15,12 @@ sonar.verbose=true
 # Sources
 # relative paths to source directories. More details and properties are described
 # in https://sonarcloud.io/documentation/project-administration/narrowing-the-focus/
-sonar.sources=src, server, analysis, coverage, build, server/coverage
+sonar.sources=src, server, analysis, coverage, build
 
 # Exclusions
-sonar.exclusions=build/**, analysis/** , coverage/**,server/coverage/**
-sonar.cpd.exclusions= build/**, analysis/** , coverage/**,server/coverage/**
-sonar.coverage.exclusions= build/**, analysis/** , coverage/**,server/coverage/**
+sonar.exclusions=build/**, analysis/** , **/coverage/**
+sonar.cpd.exclusions= build/**, analysis/** , **/coverage/**
+sonar.coverage.exclusions= build/**, analysis/** , **/coverage/**
 
 # Coverage and Test
 sonar.dynamicAnalysis=reuseReports
