--- a/package.json
+++ b/package.json
@@ -84,20 +84,30 @@
     "uuid": "^7.0.3"
   },
   "scripts": {
+    "-----DEVELOPMENT----":"",
     "dev": "concurrently -p \"[{name}]\" -n server,client -c \"bgGreen.bold,bgBlue.bold\"  --kill-others-on-fail \"npm run dev:server\" \"npm run dev:client\"",
     "dev:server": "cd server && nodemon --config \"./nodemon.json\"",
     "dev:client": "react-scripts start ",
+    "-----PRODUCTION----":"",
+    "prod:server": "cd server && npm run prod",
     "prod:build:server": "tsc --pretty --allowJs --outDir ./build_server -p ./server/tsconfig.json",
     "prod:heroku": "npm i && npm run prod:heroku:server",
     "prod:heroku:server": "./node_modules/.bin/ts-node --project ./server/tsconfig.json ./server/server.ts  server.js --optimize_for_size --max_old_space_size=460 --gc_interval=100",
     "prod:heroku:client": "node --optimize_for_size --max_old_space_size=460 -gc_interval=100 node_modules/.bin/react-scripts build",
     "start": "npm run prod:heroku:server",
+    "-----CRA----":"",
     "CRA:start": "react-scripts start",
     "CRA:build": "react-scripts build ",
     "CRA:eject": "react-scripts eject",
-    "test": "react-scripts test",
-    "test:coverage": "react-scripts test --coverage --watchAll=false --silent --testResultsProcessor ./node_modules/jest-sonar-reporter ",
-    "test:debug": "react-scripts --inspect-brk test --runInBand --no-cache --env=jest-environment-jsdom-sixteen",
+    "CRA:test": "react-scripts test",
+    "-----TEST----":"",
+    "test:app":"NODE_ENV=test npm run dev",
+    "test:client": "npm run CRA:test",
+    "test:client:coverage": "react-scripts test --coverage --watchAll=false --silent --testResultsProcessor ./node_modules/jest-sonar-reporter ",
+    "test:client:debug": "react-scripts --inspect-brk test --runInBand --no-cache --env=jest-environment-jsdom-sixteen",
+    "test:e2e": "NODE_ENV=test start-server-and-test dev 5000 cypress:open",
+    "cypress:open": "cypress open",
+    "-----LINT, ANALYZE----":"",
     "lint": "tsc --noEmit && eslint '*/**/*.{js,ts,tsx}' --quiet --fix",
     "lint:report": "./node_modules/.bin/eslint -f json -o ./analysis/eslint-report.json .",
     "analyze": "source-map-explorer build/static/js/*.js --html analysis/build-analysis.html"
@@ -115,6 +125,7 @@
     ]
   },
   "devDependencies": {
+    "@bahmutov/add-typescript-to-cypress": "^2.1.2",
     "@cypress/instrument-cra": "^1.4.0",
     "@ljharb/eslint-config": "^17.2.0",
     "@shinnn/eslint-config": "^7.0.0",
@@ -152,6 +163,7 @@
     "@typescript-eslint/parser": "^4.5.0",
     "babel-node": "0.0.1-security",
     "concurrently": "^5.3.0",
+    "cypress": "^5.5.0",
     "eslint": "^7.12.0",
     "eslint-config-google": "^0.14.0",
     "eslint-config-prettier": "^6.14.0",
@@ -170,7 +182,9 @@
     "prettier": "^2.1.2",
     "redux-mock-store": "^1.5.4",
     "source-map-explorer": "^2.5.0",
-    "ts-jest": "^26.4.2"
+    "start-server-and-test": "^1.11.5",
+    "ts-jest": "^26.4.2",
+    "webpack": "^4.44.2"
   },
   "jestSonar": {
     "useRelativePath": true,
