--- a/package.json
+++ b/package.json
@@ -183,7 +183,7 @@
     "redux-mock-store": "^1.5.4",
     "source-map-explorer": "^2.5.0",
     "start-server-and-test": "^1.11.5",
-    "webpack": "^4.44.2"
+    "webpack": "^4.44.2",
     "ts-jest": "^26.4.3"
   },
   "jestSonar": {
