--- a/.editorconfig
+++ b/.editorconfig
@@ -2,9 +2,9 @@
 root = true
 
 [*]
-indent_style = tab_width
-indent_size = 4
-tab_width = 4
+indent_style = tab
+indent_size = 2
+tab_width = 2
 end_of_line = lf
 charset = utf-8
 trim_trailing_whitespace = true
