--- a/cypress/tsconfig.json
+++ b/cypress/tsconfig.json
@@ -1,11 +1,22 @@
 {
-    "extends": "../tsconfig.json",
-    "compilerOptions": {
-        "noEmit": false,
-        "sourceMap": false
-    },
-    "include": [
-        "../node_modules/cypress",
-        "*/*.ts"
-  ]
+	"extends": "../tsconfig.json",
+	"compilerOptions": {
+		"target": "es5",
+		"lib": [
+			"es5",
+			"dom"
+		],
+		"noEmit": false,
+		"sourceMap": false,
+		"skipLibCheck": true,
+		"types": [
+			"cypress",
+			"node"
+		],
+		"rootDir": ".",
+		"isolatedModules": false
+	},
+	"include": [
+		"*/*.ts"
+	]
 }
