--- a/package.json
+++ b/package.json
@@ -101,12 +101,13 @@
     "CRA:eject": "react-scripts eject",
     "CRA:test": "react-scripts test",
     "-----TEST----": "",
-    "test:app": "NODE_ENV=test npm run dev",
+    "test:app": "cross-env NODE_ENV=test npm run dev",
     "test:client": "npm run CRA:test",
     "test:client:coverage": "react-scripts test --coverage --watchAll=false --silent --testResultsProcessor ./node_modules/jest-sonar-reporter ",
     "test:client:debug": "react-scripts --inspect-brk test --runInBand --no-cache --env=jest-environment-jsdom-sixteen",
-    "test:e2e": "NODE_ENV=test start-server-and-test dev 5000 cypress:open",
+    "test:e2e": "cross-env NODE_ENV=test start-server-and-test dev 5000 cypress:open",
     "cypress:open": "cypress open",
+    "cypress:run": "cypress run",
     "-----LINT, ANALYZE----": "",
     "lint": "tsc --noEmit && eslint '*/**/*.{js,ts,tsx}' --quiet --fix",
     "lint:report": "./node_modules/.bin/eslint -f json -o ./analysis/eslint-report.json .",
@@ -163,7 +164,10 @@
     "@typescript-eslint/parser": "^4.6.0",
     "babel-node": "0.0.1-security",
     "concurrently": "^5.3.0",
+    "cross-env": "^7.0.2",
     "cypress": "^5.5.0",
+    "cypress-skip-and-only-ui": "^1.2.10",
+    "cypress-watch-and-reload": "^1.2.18",
     "eslint": "^7.12.1",
     "eslint-config-google": "^0.14.0",
     "eslint-config-prettier": "^6.14.0",
@@ -183,8 +187,8 @@
     "redux-mock-store": "^1.5.4",
     "source-map-explorer": "^2.5.0",
     "start-server-and-test": "^1.11.5",
-    "webpack": "^4.44.2",
-    "ts-jest": "^26.4.3"
+    "ts-jest": "^26.4.3",
+    "webpack": "^4.44.2"
   },
   "jestSonar": {
     "useRelativePath": true,
