--- a/package.json
+++ b/package.json
@@ -107,7 +107,7 @@
     "test:client:debug": "react-scripts --inspect-brk test --runInBand --no-cache --env=jest-environment-jsdom-sixteen",
     "test:e2e": "cross-env NODE_ENV=test start-server-and-test dev 5000 cypress:open",
     "cypress:open": "cypress open",
-    "cypress:run": "cypress run",
+    "cypress:run": "cypress run  --record --key d290f2c0-5104-4643-96ff-ba6f773d0a9c --browser chrome",
     "-----LINT, ANALYZE----": "",
     "lint": "tsc --noEmit && eslint '*/**/*.{js,ts,tsx}' --quiet --fix",
     "lint:report": "./node_modules/.bin/eslint -f json -o ./analysis/eslint-report.json .",
