Add e2e to pipeline

--- a/cypress/tsconfig.json
+++ b/cypress/tsconfig.json
@@ -1,22 +1,7 @@
 {
-	"extends": "../tsconfig.json",
-	"compilerOptions": {
-		"target": "es5",
-		"lib": [
-			"es5",
-			"dom"
-		],
-		"noEmit": false,
-		"sourceMap": false,
-		"skipLibCheck": true,
-		"types": [
-			"cypress",
-			"node"
-		],
-		"rootDir": ".",
-		"isolatedModules": false
-	},
-	"include": [
-		"*/*.ts"
-	]
+  "extends": "../tsconfig.json",
+  "include": [
+    "../node_modules/cypress",
+    "*/*.ts"
+  ]
 }
