--- a/package.json
+++ b/package.json
@@ -84,34 +84,37 @@
     "uuid": "^7.0.3"
   },
   "scripts": {
-    "-----DEVELOPMENT----": "",
+    "-----DEVELOPMENT----": "---------------------------",
     "dev": "concurrently -p \"[{name}]\" -n server,client -c \"bgGreen.bold,bgBlue.bold\"  --kill-others-on-fail \"npm run dev:server\" \"npm run dev:client\"",
     "dev:server": "cd server && nodemon --config \"./nodemon.json\"",
     "dev:client": "react-scripts start ",
-    "-----PRODUCTION----": "",
+    "-----PRODUCTION----": "---------------------------",
     "prod:server": "cd server && npm run prod",
     "prod:build:server": "tsc --pretty --allowJs --outDir ./build_server -p ./server/tsconfig.json",
     "prod:heroku": "npm i && npm run prod:heroku:server",
     "prod:heroku:server": "./node_modules/.bin/ts-node --project ./server/tsconfig.json ./server/server.ts  server.js --optimize_for_size --max_old_space_size=460 --gc_interval=100",
     "prod:heroku:client": "node --optimize_for_size --max_old_space_size=460 -gc_interval=100 node_modules/.bin/react-scripts build",
     "start": "npm run prod:heroku:server",
-    "-----CRA----": "",
+    "-----CRA----": "---------------------------",
     "CRA:start": "react-scripts start",
     "CRA:build": "react-scripts build ",
     "CRA:eject": "react-scripts eject",
     "CRA:test": "react-scripts test",
-    "-----TEST----": "",
+    "-----TEST----": "---------------------------",
     "test:app": "cross-env NODE_ENV=test npm run dev",
     "test:client": "npm run CRA:test",
     "test:client:coverage": "react-scripts test --coverage --watchAll=false --silent --testResultsProcessor ./node_modules/jest-sonar-reporter ",
     "test:client:debug": "react-scripts --inspect-brk test --runInBand --no-cache --env=jest-environment-jsdom-sixteen",
-    "test:e2e": "cross-env NODE_ENV=test start-server-and-test dev 5000 cypress:open",
+    "test:e2e": "cross-env NODE_ENV=test CYPRESS_BASE_URL=http://localhost:5001 start-server-and-test prod:heroku:server 5001 cypress:run",
     "cypress:open": "cypress open",
-    "cypress:run": "cypress run  --record --key d290f2c0-5104-4643-96ff-ba6f773d0a9c --browser chrome",
-    "-----LINT, ANALYZE----": "",
+    "cypress:run": "cypress run  --record --key d290f2c0-5104-4643-96ff-ba6f773d0a9c --browser chrome --headless",
+    "-----LINT, ANALYZE----": "---------------------------",
     "lint": "tsc --noEmit && eslint '*/**/*.{js,ts,tsx}' --quiet --fix",
     "lint:report": "./node_modules/.bin/eslint -f json -o ./analysis/eslint-report.json .",
-    "analyze": "source-map-explorer build/static/js/*.js --html analysis/build-analysis.html"
+    "analyze": "source-map-explorer build/static/js/*.js --html analysis/build-analysis.html",
+    "-----CLI----": "---------------------------",
+    "release": "bash ./cli/release.sh",
+    "build": "bash ./cli/build.sh"
   },
   "browserslist": {
     "production": [
