--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -32,7 +32,7 @@ jobs:
             ${{ runner.os }}-build-${{ env.cache-name }}-
             ${{ runner.os }}-build-
             ${{ runner.os }}-
-      # Install dependecies
+      # Install dependencies
       - name: Install dependencies
         run: |
           npm ci
@@ -67,7 +67,7 @@ jobs:
     # if: ${{ 1==2 }}
     steps:
       - uses: actions/checkout@v2
-      # Install dependecies
+      # Install dependencies
       - name: Install dependencies
         run: |
           npm ci
@@ -80,9 +80,9 @@ jobs:
         run: |
           cd server
           npm run test:unit
-      # TODO: e2e with cypress
-      # - name: End to end tests
-      #   run: npm run test
+      # e2e
+      - name: e2e
+        run: npm run test:e2e
 
   #-----------------------------------------
   # Code Quality ( Sonarcloud )
