--- a/tsconfig.json
+++ b/tsconfig.json
@@ -35,8 +35,7 @@
     },
     "include": [
         "src",
-        "src/@common/typings/*.d.ts",
-				"cypress"
+        "src/@common/typings/*.d.ts"
     ],
     "exclude": [
         "*.css",
