--- a/package.json
+++ b/package.json
@@ -96,7 +96,7 @@
     "prod:heroku:client": "node --optimize_for_size --max_old_space_size=460 -gc_interval=100 node_modules/.bin/react-scripts build",
     "start": "npm run prod:heroku:server",
     "-----CRA----": "---------------------------",
-    "CRA:start": "react-scripts start",
+    "CRA:start": "react-scripts --requirenpm i @cypress/code-coverage nyc istanbul-lib-coverage @cypress/instrument-cra start",
     "CRA:build": "react-scripts build ",
     "CRA:eject": "react-scripts eject",
     "CRA:test": "react-scripts test",
@@ -130,6 +130,7 @@
   },
   "devDependencies": {
     "@bahmutov/add-typescript-to-cypress": "^2.1.2",
+    "@cypress/code-coverage": "^3.8.3",
     "@cypress/instrument-cra": "^1.4.0",
     "@ljharb/eslint-config": "^17.2.0",
     "@shinnn/eslint-config": "^7.0.0",
@@ -183,9 +184,11 @@
     "eslint-plugin-sonarjs": "^0.5.0",
     "eslint-plugin-testing-library": "^3.10.0",
     "install": "^0.13.0",
+    "istanbul-lib-coverage": "^3.0.0",
     "jest-environment-jsdom-sixteen": "^1.0.3",
     "jest-fetch-mock": "3.0.3",
     "jest-sonar-reporter": "^2.0.0",
+    "nyc": "^15.1.0",
     "prettier": "^2.1.2",
     "redux-mock-store": "^1.5.4",
     "source-map-explorer": "^2.5.0",
