--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -58,10 +58,10 @@ jobs:
   #-----------------------------------------
   # Test
   #-----------------------------------------
-  test:
+  unit-test:
     runs-on: ubuntu-latest
     needs: build
-    name: Tests
+    name: unit tests
     # For now disable this step
     # if: ${{ 1==2 }}
     steps:
@@ -79,27 +79,42 @@ jobs:
         run: |
           cd server
           npm run test:unit
-      # e2e
+
+  e2e-test:
+    runs-on: ubuntu-latest
+    needs: build
+    name: e2e test
+    strategy:
+      matrix:
+        browser: [ 'chrome','firefox' ]
+        containers: [1, 2, 3]
+    steps:
+      - uses: actions/checkout@v2
+      # Install dependencies
       - name: Install dependencies
-        uses: cypress-io/github-action@v2
-        with:
-          runTests: false
-      - run: |
+        run: |
+          npm ci
+          cd server && npm ci
+      - name: where am i ?
+        run: |
           pwd
           ls -l
+          echo ${{ matrix.browser }}
+      # e2e
       - name: e2e
         uses: cypress-io/github-action@v2
         with:
-          install: false
           working-directory: /home/runner/work/calcetto/calcetto
           # Start server and wait for response
           start: npm run prod:heroku:server
           wait-on: 'http://localhost:5001'
           # Test options
           config: baseUrl=http://localhost:5001
-          browser: chrome
+          browser: ${{ matrix.browser }}
+          parallel: true
           headless: true
           record: true
+          group: 'e2e_${{ matrix.browser }}'
         env:
           CYPRESS_RECORD_KEY: ${{ secrets.CYPRESS_RECORD_KEY }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
