--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -1,6 +1,8 @@
 {
+	"extends": "../tsconfig.json",
     "compileOnSave": true,
     "compilerOptions": {
+				"types": ["..src/@common/typings/*.d.ts"],
         /* Basic Options */
         // Must be "es6" due to sequelize bug. Ref https://github.com/sequelize/sequelize/issues/7840
         "target": "es6",                            /* Specify ECMAScript target version: 'ES3' (default), 'ES5', 'ES2015', 'ES2016', 'ES2017','ES2018' or 'ESNEXT'. */
@@ -18,6 +20,7 @@
         // "outFile": "./",                         /* Concatenate and emit output to single file. */
         "outDir": "../build_server",                /* Redirect output structure to the directory. */
         "rootDir": "." ,                            /* Specify the root directory of input files. Use to control the output directory structure with --outDir. */
+				"baseUrl": ".",                             /* Base directory to resolve non-absolute module names. */
         "skipLibCheck": true,
         "forceConsistentCasingInFileNames": true,
         "resolveJsonModule": true,
@@ -50,7 +53,6 @@
 
         /* Module Resolution Options */
         "moduleResolution": "node",                 /* Specify module resolution strategy: 'node' (Node.js) or 'classic' (TypeScript pre-1.6). */
-        "baseUrl": ".",                             /* Base directory to resolve non-absolute module names. */
         "paths":{
             "@commons":["src/@common"]
         },
@@ -77,8 +79,7 @@
     ],
     "include": [
         "server",
-        "src",
-        "..src/@common/typings/*.d.ts"
+        "src"
     ],
     "exclude": [
         "build",
