--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -2,7 +2,7 @@
 	"extends": "../tsconfig.json",
     "compileOnSave": true,
     "compilerOptions": {
-				"types": ["..src/@common/typings/*.d.ts"],
+				"types": ["..src/@common/typings/*.d.ts","jest","node"],
         /* Basic Options */
         // Must be "es6" due to sequelize bug. Ref https://github.com/sequelize/sequelize/issues/7840
         "target": "es6",                            /* Specify ECMAScript target version: 'ES3' (default), 'ES5', 'ES2015', 'ES2016', 'ES2017','ES2018' or 'ESNEXT'. */
