--- a/server/package.json
+++ b/server/package.json
@@ -55,15 +55,16 @@
     "@types/jest": "^26.0.15",
     "@types/node-fetch": "^2.5.7",
     "@types/supertest": "^2.0.10",
-    "jest": "^26.4.2",
+    "cross-env": "^7.0.2",
+    "jest": "^26.6.3",
     "node-fetch": "^2.6.1",
     "start-server-and-test": "^1.11.5",
     "supertest": "^4.0.2",
-    "ts-jest": "^26.3.0",
-    "typescript": "^4.0.2"
+    "ts-jest": "^26.4.4",
+    "typescript": "^4.0.5"
   },
   "dependencies": {
-    "nodemon": "^2.0.4",
+    "nodemon": "^2.0.6",
     "ts-node": "^9.0.0"
   }
 }
