--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -92,7 +92,7 @@ jobs:
     # Service containers to run with `container-job`
     services:
       # Label used to access the service container
-      postgres:
+      postgres-service:
         # Docker Hub image
         image: postgres
         # Provide the password for postgres
