--- a/.env
+++ b/.env
@@ -29,6 +29,7 @@ SERVER_SECRET='O<o@cZqCJ-Qmu1-\<C<e@R4m0n(nR&Sk'
 SERVER_HASH='dummy$Hash'
 
 # Dbs
+# Dev
 DEV_URL=postgres://calcetto:calcetto@localhost:5432/calcetto
 TEST_URL=postgres://pdnjsluf:Hg2QyM1_ZS_DMroIyb5odg_VYRfZHazm@rogue.db.elephantsql.com:5432/pdnjsluf
 TEST_SCHEMA=public
