--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,16 +3,12 @@
     "compilerOptions": {
         "target": "es5",
         "module": "esnext",
-        "lib": [
-            "dom",
-            "dom.iterable",
-            "esnext"
-        ],
+        "lib": ["dom","dom.iterable","esnext"],
         "allowJs": true,
         "jsx": "react",
         "sourceMap": true,
-        "outDir": "./dist",
-        "rootDir": "./src",
+        "outDir": "./build",
+        "rootDir": ".",
         "skipLibCheck": true,
         "forceConsistentCasingInFileNames": true,
         "resolveJsonModule": true,
@@ -27,7 +23,7 @@
             }
         ],
         "moduleResolution": "node",
-        "baseUrl": "./src",
+        "baseUrl": ".",
         "allowSyntheticDefaultImports": true,
         "esModuleInterop": true,
         "experimentalDecorators": true,
@@ -38,8 +34,9 @@
         "src/@common/typings/*.d.ts"
     ],
     "exclude": [
-        "*.css",
-        "*.scss",
-        "node_modules"
+			"*.css",
+			"*.scss",
+			"node_modules",
+			"server"
     ]
 }
