--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -135,7 +135,7 @@ jobs:
           record: true
           group: 'e2e_${{ matrix.browser }}'
         env:
-          DEBUG: cypress
+          DEBUG: cypress:webpack
           CYPRESS_RECORD_KEY: ${{ secrets.CYPRESS_RECORD_KEY }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           NODE_ENV: test
